created app-food-item-info and app-food-menu components

--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "https://stackpath.bootstrapcdn.com/bootstrap/4.4.0/css/bootstrap.min.css"
             ],
             "scripts": []
           },
